Fix languages spacing

--- a/src/components/activity/style.scss
+++ b/src/components/activity/style.scss
@@ -1,8 +1,8 @@
 .activity {
   @include subcolumn(
     $number-of-columns: 2,
-    $margin: 1.5rem,
-    $padding: 9pt
+    $margin: $subcolumn-row-spacing,
+    $padding: $page-spacing
   );
 
   &__description {
