--- a/src/components/skill/style.scss
+++ b/src/components/skill/style.scss
@@ -1,7 +1,7 @@
 .skill {
   @include subcolumn(
     $number-of-columns: 4,
-    $margin: 1.5rem,
-    $padding: 9pt
+    $margin: $subcolumn-row-spacing,
+    $padding: $page-spacing
   );
 }
