--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -4,22 +4,27 @@
 }
 
 @mixin subcolumn($number-of-columns, $margin, $padding) {
-  flex-basis: 100% / $number-of-columns;
   margin-top: 0;
   margin-bottom: $margin;
   padding: 0 $padding;
 
-  @for $i from 1 through $number-of-columns {
-    &:nth-last-child(#{$i}) {
-      margin-bottom: 0;
+  @if $number-of-columns == auto {
+    flex-basis: auto;
+  } @else {
+    flex-basis: 100% / $number-of-columns;
+
+    @for $i from 1 through $number-of-columns {
+      &:nth-last-child(#{$i}) {
+        margin-bottom: 0;
+      }
     }
-  }
 
-  &:nth-child(#{$number-of-columns}n+1) {
-    padding-left: 0;
-  }
+    &:nth-child(#{$number-of-columns}n+1) {
+      padding-left: 0;
+    }
 
-  &:nth-child(#{$number-of-columns}n) {
-    padding-right: 0;
+    &:nth-child(#{$number-of-columns}n) {
+      padding-right: 0;
+    }
   }
 }
