--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,5 +3,6 @@ $letter-height: 11.69in;
 
 $page-spacing: 9pt;
 $column-section-spacing: 4rem;
+$subcolumn-row-spacing: 1.5rem;
 
 $fa-font-path: '../static/fonts/fontawesome';
